--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -31,6 +31,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-ribbon</artifactId>
+			<version>1.3.1.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.opentracing.contrib</groupId>
 			<artifactId>opentracing-spring-web-autoconfigure</artifactId>
 			<version>0.0.4</version>
