--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -32,20 +32,27 @@
 
 		<dependency>
 			<groupId>io.opentracing.contrib</groupId>
-			<artifactId>opentracing-spring-web-autoconfigure</artifactId>
-			<version>0.0.4</version>
+			<artifactId>opentracing-spring-cloud-starter</artifactId>
+			<version>0.0.7</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.uber.jaeger</groupId>
 			<artifactId>jaeger-core</artifactId>
-			<version>0.18.0</version>
+			<version>0.21.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.uber.jaeger/jaeger-b3 -->
+		<dependency>
+			<groupId>com.uber.jaeger</groupId>
+			<artifactId>jaeger-b3</artifactId>
+			<version>0.21.0</version>
 		</dependency>
 
+		<!-- todo fix OT version 0.22.1-->
 		<dependency>
 			<groupId>io.opentracing.brave</groupId>
 			<artifactId>brave-opentracing</artifactId>
-			<version>0.20.0</version>
+			<version>0.22.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.zipkin.reporter</groupId>
